--- a/basic-calculator/index.html
+++ b/basic-calculator/index.html
@@ -2,23 +2,29 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <script src="script.js"></script>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Basic Calculator</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="script.js" defer></script>
 </head>
 <body>
+
     <h1>Basic Calculator</h1>
+
     <div>
         <input type="number" id="num1" placeholder="First number">
         <input type="number" id="num2" placeholder="Second number">
     </div>
+
     <div>
         <button id="add">Add</button>
         <button id="subtract">Subtract</button>
         <button id="multiply">Multiply</button>
         <button id="divide">Divide</button>
     </div>
-    <p id="result">Result: </p>
+
+    <p id="result">Result:</p>
+
 </body>
 </html>
+
 
